--- a/asset-dashboard-ui/src/index.html
+++ b/asset-dashboard-ui/src/index.html
@@ -17,6 +17,10 @@
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
     integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
     crossorigin=""></script>
+<!--Importing ChartJS
+http://www.chartjs.org/docs/latest/
+-->
+  <script src = 'https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js'></script>
 
   <script>
     var global = window;
